2002-11-05  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (toplevel): Added autoload setting for
	`w3m-fontify-textareas'.
	(w3m-fontify): Don't remove tag strings in the textareas;
	Call `w3m-fontify-textareas'.

	* w3m-form.el (w3m-form-treat-textarea-size): New option.
	(w3m-form-resume): Do nothing if forms is nil.
	(w3m-fontify-textareas): New function.
	(w3m-form-parse-and-fontify): Decode entities for form value;
	Record textarea rows as text property.
	(w3m-form-parse-and-fontify): Treat CRLF as a newline character.
	(w3m-form-search-textarea): New function.
	(w3m-form-textarea-replace): Rewrite.
	(w3m-form-textarea-info): Ditto.

2002-11-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-bookmark.el (w3m-bookmark-file-coding-system): Fix its
	docstring.
	(w3m-bookmark-verify-modtime): Keep buffer modified status.
	(w3m-bookmark-safe-string): New function.
	(w3m-bookmark-write-file): Call it to make given strings be safe.

2002-11-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-visit-folder): New
	definition.
	(mew-shimbun-retrieve-all, mew-shimbun-expire-all): Use
	`mew-shimbun-visit-folder'.

2002-11-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-bookmark.el: Use non-visiting working buffer; Auto-detection
	of bookmark file coding system.
	(w3m-bookmark-file-coding-system): Fix its docstring.
	(w3m-bookmark-buffer-file-name): New internal variable.
	(w3m-bookmark-mode): Add documents for commands.
	(w3m-bookmark-mode-setter): Set `default-directory'.
	(w3m-bookmark-buffer): Use non-visiting working buffer.
	(w3m-bookmark-sections): Follow the above change.
	(w3m-bookmark-kill-entries): Likewise.
	(w3m-bookmark-file-modtime, w3m-bookmark-verify-modtime)
	(w3m-bookmark-save-buffer): New functions.
	(w3m-bookmark-write-file): Use it; Stricten check.
	(w3m-bookmark-add-current-url-group): Call `w3m-bookmark-add'
	without 2nd argument.
	(w3m-about-bookmark): Give unique id to sections.