@@ -1,3 +1,8 @@
+2002-11-06  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* w3m-form.el (w3m-fontify-textareas): Replace textarea string
+	only when form data contains non-nil data.
+
 2002-11-05  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* w3m.el (toplevel): Added autoload setting for
